# R2-Bucket-Manager

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  FINAL_SUMMARY.md  LICENSE  README.md  SECURITY.md  TESTING.md  Wegmans_test.xlsx  config.example.json  config.simple.example.json  config.team.example.json  config_dev.json  config_pgp_test.json  config_test.json  debug_r2.rs  downloaded.txt  downloaded_office.docx  generate_dev_keys.sh  generate_keys.sh  generate_pgp_keys.sh  generate_team_keys.sh  generate_test_keyring.sh  keyring_all.asc  test_basic.sh  test_decrypt.sh  test_decrypt_local.rs  test_file.txt  test_folder_upload.sh  test_full_cycle.sh  test_gui_multi_recipient.sh  test_gui_upload.sh  test_local_decrypt.sh  test_multi_recipient.sh  test_non_encrypted.sh  test_pgp_content.txt  test_pgp_workflow.sh  test_r2.py  test_recent_uploads.rs  (+2 more)
docs/: CLI_REFERENCE.md  CONFIGURATION.md  ENCRYPTION.md  HOW-TO.md  INSTALLATION.md  LARGE_FILE_UPLOAD.md  MULTI_RECIPIENT_ENCRYPTION.md  QUICK_START.md  SIMPLE_TEAM_KEYS.md  TECHNICAL.md  USER_GUIDE.md
large_test_folder/: test_file_10.txt  test_file_11.txt  test_file_12.txt  test_file_13.txt  test_file_14.txt  test_file_15.txt  test_file_16.txt  test_file_17.txt  test_file_18.txt  test_file_19.txt  test_file_20.txt  test_file_21.txt  test_file_22.txt  test_file_23.txt  test_file_24.txt  test_file_25.txt  test_file_26.txt  test_file_27.txt  test_file_28.txt  test_file_29.txt  test_file_3.txt  test_file_30.txt  test_file_31.txt  test_file_32.txt  test_file_33.txt  test_file_34.txt  test_file_35.txt  test_file_36.txt  (+45 more)
(+26 files in other folders)
