[package]
name = "rust-r2"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
pgp = "0.13"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.7"
reqwest = { version = "0.12", features = ["json", "stream"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
url = "2.5"
quick-xml = "0.36"
rand = "0.8"
eframe = "0.29"
egui = "0.29"
egui_extras = "0.29"
rfd = "0.15"
dirs = "5.0"
env_logger = "0.11"

[[bin]]
name = "rust-r2-cli"
path = "src/main.rs"

[[bin]]
name = "rust-r2-gui"
path = "src/gui/main.rs"
